# claude-plugins

./: .gitignore  README.md  pyproject.toml  ruff.toml  sources.json
plugins/taskmanager-agent/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
plugins/taskmanager-agent/.claude-plugin/: hooks.json  plugin.json
plugins/taskmanager-agent/commands/: tm-assign.md  tm-converse.md  tm-health.md  tm-issue-create.md  tm-issues.md  tm-next.md  tm-plan.md  tm-project-create.md  tm-update.md  tm-work-backlog.md  tm-work.md  work-backlog.md
plugins/taskmanager-agent/references/: config.md  conversation-flow.md  decompose-flow.md  next-flow.md  plan-flow.md  pr-creation.md  process-flow.md  project-setup-flow.md  review-issue-flow.md  work-flow.md
plugins/taskmanager-agent/scripts/: check_pr_status.py  create_forgejo_pr.py  create_forgejo_repo.py  create_pr.py  tm_create_document.py  tm_create_label.py  tm_create_project_link.py  tm_create_relation.py  tm_create_status.py  tm_daemon.py  tm_get_issue.py  tm_get_project_links.py  tm_get_user.py  tm_list_comments.py  tm_list_issues.py  tm_list_labels.py  tm_list_projects.py  tm_list_statuses.py  tm_list_teams.py  tm_save_comment.py  tm_save_issue.py  tm_save_project.py  tm_session_report.py
plugins/taskmanager-agent/taskmanager/: __init__.py  config.py  models.py  secrets.py
plugins/taskmanager-agent/tests/: conftest.py  test_check_pr_status.py  test_config.py  test_daemon_database.py  test_daemon_integration.py  test_daemon_poller.py  test_daemon_reconciler.py  test_daemon_selector.py  test_daemon_session.py  test_daemon_state.py  test_forgejo_url.py  test_githost.py  test_linear_backend.py  test_models.py  test_scripts.py  (+4 more)
(+94 files in other folders)
