[project]
name = "taskmanager-agent"
version = "0.3.3"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "click>=8.1", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taskmanager"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]
